# SeniorProjectTestCurrentSensor

./: .gitignore  README.md
EPElectric_CurrentSensor/: .gitignore  sdkconfig  sdkconfig 3  sdkconfig.defaults
EPElectric_CurrentSensor/main/: CMakeLists.txt  app_main.c
EPElectric_CurrentSensor/spiffs_image/: mats.html  title.html
Node/: client.py  index.js  server.py  test.html
TestTest/: sdkconfig
TestTest/main/: udp_client.c
TestingSPIFFS/: sdkconfig
TestingSPIFFS/main/: app_main.c
esp32-i2c-lcd1602-example/: README.md
esp32-i2c-lcd1602-example/main/: app_main.c
